fix: bg line not stretching

--- a/app/scss/factory.scss
+++ b/app/scss/factory.scss
@@ -1,6 +1,6 @@
 .factory {
 	padding-top: 200px;
-	background: url('../img/factory/background-line-1.svg') center / contain no-repeat;
+	background: url('../img/factory/background-line-1.svg') center / 100% 100% no-repeat;
 
 	@media (max-width: 1199px) {
 		padding-top: 150px;
